@@ -4,7 +4,7 @@ plugins {
   id 'pmd'
   id 'jacoco'
   id 'io.spring.dependency-management' version '1.1.4'
-  id 'org.springframework.boot' version '3.2.1'
+  id 'org.springframework.boot' version '3.2.2'
   id 'org.owasp.dependencycheck' version '9.0.5'
   id 'com.github.ben-manes.versions' version '0.50.0'
   id 'org.sonarqube' version '4.4.1.3373'
@@ -154,6 +154,13 @@ dependencies {
   testImplementation 'com.github.stefanbirkner:system-lambda:1.2.1'
   testImplementation 'io.github.hakky54:logcaptor:2.9.2'
   testImplementation 'com.squareup.okhttp3:mockwebserver:4.12.0'
+  testImplementation group: 'com.github.hmcts', name: 'fortify-client', version: '1.4.0', classifier: 'all'
+}
+
+task fortifyScan(type: JavaExec)  {
+  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
 }
 
 mainClassName = 'uk.gov.hmcts.reform.pip.cron.trigger.Application'
